--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=localhost;Port=5433;Database=DietologistDb;User Id=postgres;Username=AbsoluteGamers33;Password=ThisIsOneStrongAssPassword!;"
   },
   "Logging": {
     "LogLevel": {
