--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,22 @@
-﻿#version: '3.8'
+﻿version: '3.8'
 
 services:
   postgres:
     image: postgres:15-alpine
     container_name: postgres
     environment:
-      POSTGRES_USER: "${POSTGRES_USERNAME}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "AbsoluteGamers33"
+      POSTGRES_PASSWORD: "ThisIsOneStrongAssPassword!"
+      POSTGRES_DB: "DietologistDb"
     ports:
-      - "5432:5432"
-    volumes:
-      - postgresdata:/var/lib/postgresql/data
+      - "5433:5432"
     networks:
       - app-network
-
-  webapi:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: webapi
-    ports:
-      - "5000:80"
-    depends_on:
-      - postgres
-    environment:
-      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=${POSTGRES_DB};Username=${POSTGRES_USERNAME};Password=${POSTGRES_PASSWORD};"
-    networks:
-      - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U AbsoluteGamers33 -d DietologistDb"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   pgadmin:
     image: dpage/pgadmin4
@@ -41,9 +30,6 @@ services:
       - postgres
     networks:
       - app-network
-
-volumes:
-  postgresdata:
 
 networks:
   app-network:
