--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Ignore build outputs
 bin/
 obj/
+out/
 
 # Ignore user-specific files
 *.user
@@ -13,6 +14,7 @@ obj/
 
 # Ignore Visual Studio Code settings
 .vscode/
+.vs/
 
 # Ignore logs
 logs/
